--- a/Web/Restaurant.Web/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
+++ b/Web/Restaurant.Web/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
@@ -8,13 +8,15 @@
     <li class="nav-item"><a class="nav-link @ManageNavPages.IndexNavClass(ViewContext)" id="profile" asp-page="./Index">Profile</a></li>
     <li class="nav-item"><a class="nav-link @ManageNavPages.EmailNavClass(ViewContext)" id="email" asp-page="./Email">Email</a></li>
     <li class="nav-item"><a class="nav-link @ManageNavPages.ChangePasswordNavClass(ViewContext)" id="change-password" asp-page="./ChangePassword">Password</a></li>
-@if (hasExternalLogins)
+    @if (hasExternalLogins)
     {
-    <li id="external-logins" class="nav-item">
-        <a id="external-login" class="nav-link @ManageNavPages.ExternalLoginsNavClass(ViewContext)" asp-page="./ExternalLogins">External logins</a></li>
-}
-<li class="nav-item"><a class="nav-link @ManageNavPages.TwoFactorAuthenticationNavClass(ViewContext)" id="two-factor" asp-page="./TwoFactorAuthentication">Two-factor authentication</a></li>
-<li class="nav-item"><a class="nav-link @ManageNavPages.PersonalDataNavClass(ViewContext)" id="personal-data" asp-page="./PersonalData">Personal data</a></li>
-<li><a class="nav-item nav-link" asp-area="" asp-controller="Reservation" asp-action="All">My reservations</a></li>
-<li><a class="nav-item nav-link" asp-area="" asp-controller="Address" asp-action="All">My addresses</a></li>
+        <li id="external-logins" class="nav-item">
+            <a id="external-login" class="nav-link @ManageNavPages.ExternalLoginsNavClass(ViewContext)" asp-page="./ExternalLogins">External logins</a>
+        </li>
+    }
+    <li class="nav-item"><a class="nav-link @ManageNavPages.TwoFactorAuthenticationNavClass(ViewContext)" id="two-factor" asp-page="./TwoFactorAuthentication">Two-factor authentication</a></li>
+    <li class="nav-item"><a class="nav-link @ManageNavPages.PersonalDataNavClass(ViewContext)" id="personal-data" asp-page="./PersonalData">Personal data</a></li>
+    <li><a class="nav-item nav-link" asp-area="" asp-controller="Reservation" asp-action="All">Reservations</a></li>
+    <li><a class="nav-item nav-link" asp-area="" asp-controller="Address" asp-action="All">Addresses</a></li>
+    <li><a class="nav-item nav-link" asp-area="" asp-controller="Order" asp-action="All">Orders</a></li>
 </ul>
