--- a/Web/Restaurant.Web/Views/Review/AllReviews.cshtml
+++ b/Web/Restaurant.Web/Views/Review/AllReviews.cshtml
@@ -8,46 +8,41 @@
 
 <partial name="_HeroPartial" />
 
-<!-- To do: Improve UI - add bootstrap card class. -->
-
 <div class="row g-4 mb-3 wow fadeInUp" data-wow-delay="0.1s">
     <div class="text-center">
         <h5 class="section-title ff-secondary text-center text-primary fw-normal">Testimonial</h5>
         <h1 class="mb-5">Customer feedback</h1>
     </div>
+    <div class="row">
+        @foreach (var review in Model.Items)
+        {
 
-    @foreach (var review in Model.Items)
-    {
-        <div class="card offset-xl-1 col-md-10 border-3 border-dark wow fadeInUp" data-wow-delay="0.1s">
-            <div class="row d-flex">
-                <div class="d-flex flex-column">
-                    <h3 class="mt-2 mb-3">@review.FullName</h3>
-                    <div>
-                        <p class="text-left">
-                            @for (int i = 0; i < review.Rating; i++)
-                            {
-                                <i class="fa fa-star text-primary fs-3"></i>
-                            }
-                            <span class="text-muted fs-3">@review.Rating/5</span>
-                        </p>
+            <div class="col-xl-6 p-5">
+                <div class="card border-5 border-dark bg-body wow fadeInUp" data-wow-delay="0.1s">
+                    <div class="card-header bg-white">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <img class="profile-pic" src="@review.ImageUrl" asp-append-version="true">
+                            </div>
+                            <div class="col-md-6">
+                                    @for (int i = 0; i < review.Rating; i++)
+                                    {
+                                        <i class="fa fa-star text-primary fs-3 mt-4"></i>
+                                    }
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-body ">
+                        <h5>@review.Summary</h5>
+                        <p class="card-text">@review.Description</p>
+                    </div>
+                    <div class="card-footer">
+                        <p class="card-text"><small>@review.CreatedOn.ToLocalTime()</small></p>
                     </div>
                 </div>
-
             </div>
-            <div class="row text-left">
-                <h4 class="text-primary mb-3">@review.Summary</h4>
-                <p class="content">@review.Description</p>
-            </div>
-            <div class="row g-0">
-                <div class="col-md-6">
-                    <img class="profile-pic " src="@review.ImageUrl" asp-append-version="true">
-                </div>
-                <div class="col-md-6">
-                    <p class="text-muted fw-bold pt-5 pt-sm-5 offset-xl-10">@review.CreatedOn.ToLocalTime()</p>
-                </div>
-            </div>
-        </div>
-    }
+        }
+    </div>
 </div>
 
 <partial name="_PagingPartial" model="@Model" />
